Bug 1127727 - Swap callbacks in the Compositor when dragging tabs between windows. r=billm

When remote browsing, swap the MozLayersReady callback in the compositor
when dragging tabs between windows.